examples/test/testpolicy18145.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18145
  namespace: namespace499
spec:
  podSelector:
    matchLabels:
      key27: value2
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key26: value20
          key27: value46
          key1: value36
      podSelector:
        matchLabels:
          key36: value28
          key17: value47
